# iris

./: .env.example  .gitignore  .pre-commit-config.yaml  =6.0.0  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
docker/: docker-compose.dev.yml
docker/init-scripts/: 01_create_iris_user.sql  02_create_mlflow_user.sql  03_create_sample_schema.sql
docs/: API_CLI_DESIGN.md  CLAUDE.md  COST_CALCULATOR_DESIGN.md  DEV_ENVIRONMENT_PLAN.md  IMPLEMENTATION_PLAN.md  IRIS.md  OPTIONAL_ENHANCEMENTS_PLAN.md  PHASE_1_PLAN.md  QUICK_REFERENCE.md  README.md  RECOMMENDATION_ENGINE_DESIGN.md  SIMULATION_WORKLOADS.md  SOCIAL_MEDIA_POST.txt  TWITTER_POST.txt  USER_GUIDE.md  WEB_CONSOLE_IMPLEMENTATION_PLAN.md  WEB_CONSOLE_OPTIONS.md  WEB_CONSOLE_REQUIREMENTS.md
frontend/: .env.example  .prettierignore  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: start-dev.sh  status.sh  stop-dev.sh
src/api/: __init__.py  app.py
src/cli/: __init__.py  cli.py  commands.py  config.py  version.py
src/common/: __init__.py  cache_interface.py  storage_interface.py
src/data/: __init__.py  awr_collector.py  feature_engineer.py  query_parser.py  schema_collector.py  workload_compressor.py
src/features/: __init__.py
src/llm/: __init__.py  claude_client.py
src/pipeline/: __init__.py  converters.py  orchestrator.py
src/recommendation/: __init__.py  cost_calculator.py  cost_models.py  models.py  pattern_detector.py  recommendation_engine.py  roi_calculator.py  sql_generator.py  tradeoff_analyzer.py
src/services/: __init__.py  analysis_service.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/data/: __init__.py
tests/data/fixtures/: __init__.py
tests/integration/: VALIDATION_FINDINGS.md  test_cost_calculation_e2e.py  test_end_to_end_pattern_detection.py  test_pipeline_orchestrator.py  test_placeholder.py  test_recommendation_pipeline.py
tests/integration/workloads/: WORKLOAD_SCENARIOS.md  __init__.py  schemas.py  workload_generator.py
tests/simulations/: INTEGRATION_GUIDE.md  README.md  __init__.py  awr_helper.py  conftest.py  recommendation_validator.py  run_simulation.py  test_pipeline_simulations.py
tests/simulations/data_generators/: __init__.py  ecommerce_generator.py  inventory_generator.py  orders_generator.py
tests/simulations/sql/: cleanup.sql  workload1_schema.sql  workload2_schema.sql  workload3_schema.sql
tests/unit/: test_awr_collector.py  test_feature_engineer.py  test_placeholder.py  test_query_parser.py  test_redis_cache.py  test_schema_collector.py  test_storage.py  test_workload_compressor.py
(+57 files in other folders)
